objects/ASI_CRM_Physical_Inventory_Check_Item__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Confirmed__c</fullName>
        <formula>ASI_CRM_Physical_Inventory_Check__r.ASI_CRM_Confirmed__c</formula>
        <label>Confirmed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Date_of_Checking__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date of Checking</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_Inventory_Btl__c</fullName>
        <label>Inventory (Btl)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Inventory_Btl_from_WS__c</fullName>
        <label>Inventory (Btl) from WS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Item_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Group</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN Physical Inventory Check Item</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_Item_Group__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN CRM Item Group</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_Item_Group__c.ASI_MFM_Item_Group_Code__c</field>
                <operation>equals</operation>
                <valueField>ASI_MFM_Item_Group__c.ASI_CRM_CN_Consumer_web_Code_C__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_Item_Group__c</referenceTo>
        <relationshipLabel>Physical Inventory Check Items</relationshipLabel>
        <relationshipName>Physical_Inventory_Check_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Month__c</fullName>
        <formula>ASI_CRM_Physical_Inventory_Check__r.ASI_CRM_Month__c</formula>
        <label>Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Physical_Inventory_Check__c</fullName>
        <label>Physical Inventory Check</label>
        <referenceTo>ASI_CRM_Physical_Inventory_Check__c</referenceTo>
        <relationshipLabel>Physical Inventory Check Items</relationshipLabel>
        <relationshipName>Physical_Inventory_Check_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Physical Inventory Check Item</label>
    <nameField>
        <displayFormat>PICI-{00000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Physical Inventory Check Items</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Physical_Inventory_Check_Item</fullName>
        <active>true</active>
        <label>CN Physical Inventory Check Item</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>